created a ordered and unorded list

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="en"
+<html>
 <head>
-  <meta charset="UTF-8">
-<meta http-equiv="x-UA-compatible content=" IE="edge"/>
-<meta name="view part" content="width=device-width, initial-scale=I.O"/>
-<title>list of tables</title>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Lists and tables</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  
 </head>
-  <body>
-    <h1>Hello</h1>
-  <h2>Ordered list</h2>
-    
-  </body>
+<body>
+  <h1>Hello</h1>
+  <h2>Ordered lists</h2>
+  <ol>
+    <li>Apple</li>
+    <li>Banana</li>
+    <li>Orange</li>
+    <li>pineaple</li>
 
-</html>
+
+  </ol>
+  <h2>Unordered lists</h2>
+  <ul>
+    <li>Evan</li>
+    <li>Samantha</li>
+    <li>Elsie</li>
+    <li>Cadette</li>
+    <li>Ange</li>
+    <li>Arabella</li>
+  </ul>
+  <h2>Nested list</h2>
+</body>
+</html> 
