added Nested list

--- a/index.html
+++ b/index.html
@@ -28,5 +28,18 @@
     <li>Arabella</li>
   </ul>
   <h2>Nested list</h2>
+  <h3>Learning content</h3>
+  <ol>
+    <li>Lists
+     <ul>
+      <li>Ordered list</li>
+      <li>Unoreded list</li>
+      <li>Nested list</li>
+     </ul> 
+    </li>
+
+    <li>Tables</li>
+    <li>Links</li>
+  </ol>
 </body>
 </html> 
