created list of tables

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   
 </head>
+<header>
+<hi> Monday class</hi>
+<nav>
+  <a href="./index.html">Lists</a>
+  <a href="./tables.html">Table</a>
+  <a href="./CSS.html">CSS</a>
+</nav>
+
+</header>
 <body>
   <h1>Hello</h1>
   <h2>Ordered lists</h2>
@@ -38,8 +47,16 @@
      </ul> 
     </li>
 
-    <li>Tables</li>
+    <li>Tables
+    <ol>
+      <li>HTML Tables</li>
+      <li>CSS Table</li>
+      <li>Javascript Table</li>
+    </ol>
+    </li>
+    
     <li>Links</li>
   </ol>
+  
 </body>
 </html> 
