Hedy Lamarr(tribute page)

--- a/tables.html
+++ b/tables.html
@@ -19,7 +19,31 @@
   </header>
 <body>
   <h1>tables</h1>
-  
+  <h2>List of Groceries</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Number</th>
+        <th>Name</th>
+        <th>Quantity</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Rice</td>
+        <td>1bag</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Meat</td>
+        <td>10kg</td>
+      </tr>
+    </tbody>
+    <tfooter>
+
+    </tfooter>
+  </table>
   
 </body>
 </html>
